# cloudplayer-tauri

./: CLAUDE.md  MUSIC_CATALOG.md  PROXY.md  index.html  package.json
src/: context-menu.js  lyrics.js  main.js  mobile-ui.js  pages.js  player.js  settings.js  state.js  styles.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: gequhai_probe.rs
src-tauri/permissions/: main-app.toml
src-tauri/src/: config.rs  db.rs  download.rs  import_enrich.rs  lib.rs  lyrics.rs  proxy.rs
src-tauri/src/commands/: lyrics_cmd.rs  mod.rs  play_resolve_cmd.rs  playlist_cmd.rs  proxy_cmd.rs  recent_cmd.rs  search_cmd.rs  settings_cmd.rs
src-tauri/src/music_catalog/: id.rs  mod.rs  provider.rs  service.rs  types.rs
src-tauri/src/music_catalog/providers/: gequhai.rs  mod.rs  pjmp3.rs  pjmp3_impl.rs
